tdf#126477 DOCX export: fix lost charts in embedded documents

The charts of the embedded documents were not exported.

Follow-up to commit a41cf57c1eb4cabe5afc1a45d6fe535dbb935217
"tdf#134987 convert DOCX to ODT: fix lost charts".

Change-Id: I20f1cdfa68687043d0822c4bbf59793a208e83d6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143495
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>